--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -4,3 +4,8 @@
     <li><%= song.title %></li>
   <% end %>
 </ul>
+
+
+<!-- Update the artists show view to list each song for that artist, and use the 
+new nested resource route helper to link each song to its corresponding show page.
+-->
