--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,6 +1,11 @@
 <h1>Artists</h1>
 <ul>
   <% @artists.each do |artist| %>
-    <li><%= link_to artist.name, artist_path(artist) %></li>
+    <li><%= link_to artist.name, artist_songs_path(artist) %></li>
   <% end %>
 </ul>
+
+<!--
+Update the artists index view to use the new nested 
+resource route URL helper to link to the index of all songs by that artist.
+-->
